# reminderbot

./: .gitignore  Cargo.toml
src/: date.rs  event_handler.rs  futures_flag.rs  main.rs  reminder_handler.rs  reminders.rs
src/db/: address_book.rs  mod.rs  reminders.rs
src/matrix/: mod.rs  types.rs
