[package]
name = "rust-sync"
version = "0.1.0"
authors = ["erikj"]

[dependencies]
tokio-core = "0.1.12"
serde = "1.0.27"
serde_derive = "1.0.27"
serde_json = "1.0.9"
futures = "0.1.18"
hyper = "0.12.0"
failure = "0.1.1"
tokio-timer = "0.2.0"
hyper-native-tls = "0.2.4"
hyper-tls = "0.3.0"
slog = "2.1.1"
slog-term = "2.3.0"
slog-async = "2.2.0"
twilio_rust = "0.1.0"
tokio-signal = "0.2.0"
toml = "0.4.5"
chrono = "0.4.0"
regex = "1.0.0"
rusqlite = "0.13.0"
linear-map = "1.2.0"
rand = "0.5.0"
